objects/AcctSeed__Bank_Rule__c.object
<CustomObject>
    <description>A Bank Rule along with its associated Conditions and Actions is used to create pre-populated source document records from Bank Transactions.</description>
    <fields>
        <fullName>AcctSeed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, Bank Rules will be applied when processing Bank Transactions.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Apply_To_All_Financial_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Apply the Bank Rule to transactions from all financial institution accounts.</inlineHelpText>
        <label>Apply To All Financial Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <inlineHelpText>For your reference, describe what the Bank Rule does.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Evaluation_Type__c</fullName>
        <label>Evaluation Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Or</fullName>
                    <label>Any</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Priority__c</fullName>
        <inlineHelpText>When a Bank Rule runs relative to other bank rules. A rule with a priority of 1 will run before a rule with priority of 2.</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source_Record_Type__c</fullName>
        <inlineHelpText>The type of source document to create if the Bank Rule&apos;s conditions are met.</inlineHelpText>
        <label>Source Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AcctSeed__Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AcctSeed__Cash_Disbursement__c</fullName>
                    <label>Cash Disbursement</label>
                </value>
                <value>
                    <fullName>AcctSeed__Cash_Receipt__c</fullName>
                    <label>Cash Receipt</label>
                </value>
                <value>
                    <fullName>AcctSeed__Journal_Entry_Line__c</fullName>
                    <label>Journal Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <inlineHelpText>The type of transactions to which the Bank Rule applies.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash_In</fullName>
                    <default>true</default>
                    <label>Cash In</label>
                </value>
                <value>
                    <fullName>Cash_Out</fullName>
                    <label>Cash Out</label>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>